# models/contract.go
@@ -1,0 +1,52 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Contract contract
+//
+// swagger:model Contract
+type Contract struct {
+	Abi     string `json:"abi,omitempty"`
+	Address string `json:"address,omitempty"`
+	Name    string `json:"name,omitempty"`
+	Tx      string `json:"tx,omitempty"`
+	ID      int64  `json:"id,omitempty"`
+}
+
+// Validate validates this contract
+func (m *Contract) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this contract based on context it is used
+func (m *Contract) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Contract) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Contract) UnmarshalBinary(b []byte) error {
+	var res Contract
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
