# models/marketplace_collectible_details.go
@@ -1,0 +1,67 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// MarketplaceCollectibleDetails marketplace collectible details
+//
+// swagger:model MarketplaceCollectibleDetails
+type MarketplaceCollectibleDetails struct {
+	PriceWei        string `json:"price_wei,omitempty"`
+	Tags            string `json:"tags,omitempty"`
+	Total           string `json:"total,omitempty"`
+	Collection      string `json:"collection,omitempty"`
+	Price           string `json:"price,omitempty"`
+	Fee             string `json:"fee,omitempty"`
+	FeeWei          string `json:"fee_wei,omitempty"`
+	Address         string `json:"address,omitempty"`
+	TotalWei        string `json:"total_wei,omitempty"`
+	StartPriceWei   string `json:"start_price_wei,omitempty"`
+	StartPrice      string `json:"start_price,omitempty"`
+	ReservePriceWei string `json:"reserve_price_wei,omitempty"`
+	ReservePrice    string `json:"reserve_price,omitempty"`
+	Quantity        int64  `json:"quantity,omitempty"`
+	StartTime       int64  `json:"start_time,omitempty"`
+	EndTime         int64  `json:"end_time,omitempty"`
+	Fulfilled       bool   `json:"fulfilled,omitempty"`
+	Auction         bool   `json:"auction,omitempty"`
+	Cancelled       bool   `json:"cancelled,omitempty"`
+	IsStarted       bool   `json:"is_started,omitempty"`
+}
+
+// Validate validates this marketplace collectible details
+func (m *MarketplaceCollectibleDetails) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this marketplace collectible details based on context it is used
+func (m *MarketplaceCollectibleDetails) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MarketplaceCollectibleDetails) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MarketplaceCollectibleDetails) UnmarshalBinary(b []byte) error {
+	var res MarketplaceCollectibleDetails
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
