# models/marketplace_collectible_metadata.go
@@ -1,0 +1,126 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// MarketplaceCollectibleMetadata marketplace collectible metadata
+//
+// swagger:model MarketplaceCollectibleMetadata
+type MarketplaceCollectibleMetadata struct {
+	AnimationURL    string                `json:"animation_url,omitempty"`
+	BackgroundColor string                `json:"background_color,omitempty"`
+	Description     string                `json:"description,omitempty"`
+	ExternalURL     string                `json:"external_url,omitempty"`
+	Image           string                `json:"image,omitempty"`
+	Name            string                `json:"name,omitempty"`
+	YoutubeURL      string                `json:"youtube_url,omitempty"`
+	Attributes      []*MetadataAttributes `json:"attributes"`
+}
+
+// Validate validates this marketplace collectible metadata
+func (m *MarketplaceCollectibleMetadata) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAttributes(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *MarketplaceCollectibleMetadata) validateAttributes(formats strfmt.Registry) error {
+	if swag.IsZero(m.Attributes) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Attributes); i++ {
+		if swag.IsZero(m.Attributes[i]) { // not required
+			continue
+		}
+
+		if m.Attributes[i] != nil {
+			if err := m.Attributes[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("attributes" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("attributes" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this marketplace collectible metadata based on the context it is used
+func (m *MarketplaceCollectibleMetadata) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAttributes(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *MarketplaceCollectibleMetadata) contextValidateAttributes(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Attributes); i++ {
+
+		if m.Attributes[i] != nil {
+
+			if swag.IsZero(m.Attributes[i]) { // not required
+				return nil
+			}
+
+			if err := m.Attributes[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("attributes" + "." + strconv.Itoa(i))
+				} else if ce, ok := err.(*errors.CompositeError); ok {
+					return ce.ValidateName("attributes" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MarketplaceCollectibleMetadata) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MarketplaceCollectibleMetadata) UnmarshalBinary(b []byte) error {
+	var res MarketplaceCollectibleMetadata
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
