# models/metadata_attributes.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// MetadataAttributes metadata attributes
+//
+// swagger:model MetadataAttributes
+type MetadataAttributes struct {
+
+	// trait type
+	TraitType string `json:"trait_type,omitempty"`
+
+	// value
+	Value string `json:"value,omitempty"`
+}
+
+// Validate validates this metadata attributes
+func (m *MetadataAttributes) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this metadata attributes based on context it is used
+func (m *MetadataAttributes) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *MetadataAttributes) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *MetadataAttributes) UnmarshalBinary(b []byte) error {
+	var res MetadataAttributes
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
