# models/public_user.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PublicUser public user
+//
+// swagger:model PublicUser
+type PublicUser struct {
+	Address     string `json:"address,omitempty"`
+	Created     string `json:"created,omitempty"`
+	Email       string `json:"email,omitempty"`
+	Funds       string `json:"funds,omitempty"`
+	Gravatar    string `json:"gravatar,omitempty"`
+	Nonce       string `json:"nonce,omitempty"`
+	Token       string `json:"token,omitempty"`
+	Username    string `json:"username,omitempty"`
+	UUID        string `json:"uuid,omitempty"`
+	Wallpaper   string `json:"wallpaper,omitempty"`
+	ID          int64  `json:"id,omitempty"`
+	WallpaperID int64  `json:"wallpaperId,omitempty"`
+}
+
+// Validate validates this public user
+func (m *PublicUser) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this public user based on context it is used
+func (m *PublicUser) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PublicUser) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PublicUser) UnmarshalBinary(b []byte) error {
+	var res PublicUser
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
